--- a/plugin.cfg
+++ b/plugin.cfg
@@ -4,4 +4,4 @@ name="I, Voyager - Save"
 description="Generates a compact savegame data structure from properties specified in object constants in a scene tree. Sets properties and rebuilds procedural parts of the scene tree on load."
 author="Charlie Whitfield"
 version="v0.0.2.dev"
-script="plugin.gd"
+script="editor_plugin.gd"
